adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -48,7 +48,9 @@
       "careproc",
       "certinfo",
       "changestatus",
+      "checkmark",
       "christoomey",
+      "citems",
       "Ckhp",
       "COBUYER",
       "cohama",
@@ -58,6 +60,7 @@
       "contractpreflight",
       "contractstatuses",
       "controlfreak",
+      "coord",
       "ctermfgs",
       "danlaw",
       "danlawapi",
@@ -78,6 +81,7 @@
       "EASYCARE",
       "econtract",
       "edmunds",
+      "elwccm",
       "EMOV",
       "emtz",
       "enchelper",
@@ -91,6 +95,7 @@
       "fenceid",
       "fiadmin",
       "Fira",
+      "FLEXBUY",
       "fonturl",
       "forumbee",
       "funcobj",
@@ -101,6 +106,7 @@
       "Gtag",
       "guifgs",
       "GWSZ",
+      "hacky",
       "hdop",
       "healthcheck",
       "Helvetica",
@@ -110,6 +116,7 @@
       "iamadminapi",
       "iamapi",
       "idanarye",
+      "idbtn",
       "IFTTT",
       "illightd",
       "imei",
@@ -118,6 +125,7 @@
       "inservicerequired",
       "ipam",
       "ISCOMPLETE",
+      "ISFINAL",
       "Jmob",
       "journeyapi",
       "junegunn",
@@ -133,6 +141,7 @@
       "luochen",
       "luxon",
       "mailchimp",
+      "MAINRATETERM",
       "makemodelinfo",
       "makerapi",
       "makerjs",
@@ -149,6 +158,7 @@
       "mongodb",
       "monospace",
       "msgproc",
+      "MULTITERM",
       "mygroup",
       "nelstrom",
       "neoclide",
@@ -190,12 +200,14 @@
       "ratepersist",
       "ratesasquotes",
       "recalc",
+      "Rerate",
       "RISTKEN",
       "ristkensoft",
       "Roboto",
       "rssapplications",
       "rssi",
       "rver",
+      "SALETYPE",
       "saletypes",
       "sallyapi",
       "satd",
@@ -252,6 +264,7 @@
       "trekapi",
       "trekweb",
       "triplegs",
+      "uiprod",
       "unfetch",
       "UNPROCESSABLEENTITY",
       "upscope",
@@ -273,10 +286,12 @@
       "watchurl",
       "Wdth",
       "webservice",
+      "wistia",
       "xockp",
       "Xuyuanp",
       "yggdroot",
       "Zeyada",
+      "zjgpj",
       "zulgwapi"
     ]
 }
