adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -48,7 +48,9 @@
       "careproc",
       "certinfo",
       "changestatus",
+      "chartsapi",
       "checkmark",
+      "chmupt",
       "christoomey",
       "citems",
       "Ckhp",
@@ -61,6 +63,7 @@
       "contractstatuses",
       "controlfreak",
       "coord",
+      "coremenudeals",
       "ctermfgs",
       "danlaw",
       "danlawapi",
@@ -68,6 +71,7 @@
       "DATETIME",
       "Dawningofa",
       "dealeraccount",
+      "dealerid",
       "DEALERNAME",
       "dealersettings",
       "Delafield",
@@ -132,6 +136,7 @@
       "justinmk",
       "Kvppf",
       "landingweb",
+      "lastchanged",
       "launchdarkly",
       "Lbbaqqbb",
       "lexima",
@@ -148,6 +153,7 @@
       "mapbox",
       "mattn",
       "Menlo",
+      "menuprologin",
       "menutransid",
       "merginal",
       "messageapi",
