adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -54,8 +54,10 @@
       "christoomey",
       "citems",
       "Ckhp",
+      "cmode",
       "COBUYER",
       "cohama",
+      "columnid",
       "commerceapi",
       "contractid",
       "contractids",
@@ -67,7 +69,10 @@
       "ctermfgs",
       "danlaw",
       "danlawapi",
+      "Darkholme",
+      "dataapi",
       "dateofsale",
+      "datepicker",
       "DATETIME",
       "Dawningofa",
       "dealeraccount",
@@ -94,6 +99,7 @@
       "erating",
       "ESIG",
       "Esigned",
+      "exceljs",
       "fauria",
       "fcpg",
       "fenceid",
@@ -109,6 +115,7 @@
       "Gramm",
       "Gtag",
       "guifgs",
+      "gwapi",
       "GWSZ",
       "hacky",
       "hdop",
@@ -142,6 +149,7 @@
       "lexima",
       "liveweb",
       "localdev",
+      "logstash",
       "Lucida",
       "luochen",
       "luxon",
@@ -163,6 +171,7 @@
       "modelmode",
       "mongodb",
       "monospace",
+      "msdb",
       "msgproc",
       "MULTITERM",
       "mygroup",
@@ -170,16 +179,21 @@
       "neoclide",
       "Neue",
       "newpassword",
+      "newrelic",
       "Nexa",
       "nextjs",
       "nkypjj",
+      "noarg",
       "nodemon",
+      "nonvalidatecount",
       "noopener",
       "noreferrer",
       "OFAC",
       "offsiteapi",
+      "onclickoutside",
       "opentype",
       "ordersapi",
+      "pageid",
       "partnereligibleproducts",
       "partnerproductrates",
       "passwordchange",
@@ -187,9 +201,11 @@
       "pdfs",
       "polyline",
       "precommit",
+      "productcategoryid",
       "productcode",
       "productcontracts",
       "producteligible",
+      "productid",
       "productquote",
       "profileapi",
       "profitsetting",
@@ -206,6 +222,11 @@
       "ratepersist",
       "ratesasquotes",
       "recalc",
+      "reportdata",
+      "reportid",
+      "reportsapi",
+      "reporttypeid",
+      "reporttypes",
       "Rerate",
       "RISTKEN",
       "ristkensoft",
@@ -220,10 +241,12 @@
       "SDQVQ",
       "seayou",
       "Segoe",
+      "setingapi",
       "settingsdwa",
       "sheerun",
       "showcaseapi",
       "showcasepi",
+      "siggwapi",
       "spandealerid",
       "spanprovider",
       "spanproviders",
@@ -237,6 +260,7 @@
       "tcomment",
       "telematic",
       "telproc",
+      "theming",
       "TIMEFRAME",
       "tloacctapi",
       "tloadminapi",
@@ -295,6 +319,7 @@
       "wistia",
       "xockp",
       "Xuyuanp",
+      "yats",
       "yggdroot",
       "Zeyada",
       "zjgpj",
