adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -8,7 +8,10 @@
     "cSpell.userWords": [
       "accountcode",
       "acctapi",
+      "activedealerships",
       "activitycode",
+      "addapplication",
+      "addfavorites",
       "adminapi",
       "agendash",
       "airdock",
@@ -22,8 +25,10 @@
       "applicationsettings",
       "appname",
       "apptapi",
+      "archid",
       "ardproc",
       "asmx",
+      "attrid",
       "autocapitalize",
       "autocorrect",
       "autodocker",
@@ -35,42 +40,64 @@
       "Bitstream",
       "Bliley",
       "blinkon",
+      "booleanmappings",
       "bouapi",
       "bouncie",
       "bounciedev",
       "bousallyapi",
       "BPAA",
       "branchio",
+      "calculationtypes",
       "camelcase",
       "campapi",
       "Cantarell",
       "careapi",
       "careproc",
+      "catid",
       "certinfo",
       "changestatus",
+      "chargebacks",
       "chartsapi",
       "checkmark",
+      "childlevelid",
+      "childlevels",
+      "childsetupbooleanid",
+      "childsetupbooleans",
+      "childsetupfiltercategories",
+      "childsetupfilterid",
+      "childsetupfilters",
+      "childsetupproductid",
+      "childsetupproducts",
+      "childsourceid",
+      "childsources",
       "chmupt",
       "christoomey",
       "citems",
       "Ckhp",
+      "cloneranking",
       "cmode",
       "COBUYER",
       "cohama",
       "columnid",
       "commerceapi",
+      "companyid",
       "contractid",
       "contractids",
+      "contractnumber",
       "contractpreflight",
       "contractstatuses",
+      "contractstatusname",
       "controlfreak",
       "coord",
       "coremenudeals",
+      "cosig",
       "ctermfgs",
+      "CUSTOMERDEALNUMBER",
       "danlaw",
       "danlawapi",
       "Darkholme",
       "dataapi",
+      "datatypes",
       "dateofsale",
       "datepicker",
       "DATETIME",
@@ -80,11 +107,18 @@
       "DEALERNAME",
       "dealersettings",
       "Delafield",
+      "deletefavorites",
+      "denominationtypes",
+      "devisionid",
       "devops",
       "devtools",
       "dissoc",
       "distproc",
+      "distributionreports",
+      "districtid",
       "dkahjpq",
+      "dmsfielddatatype",
+      "dmsfields",
       "dnscache",
       "driveapi",
       "EASYCARE",
@@ -94,25 +128,44 @@
       "EMOV",
       "emtz",
       "enchelper",
+      "enddt",
+      "enumsetupbooleandatestamptype",
+      "enumsetupcollectionmaptypes",
+      "enumsystemfieldslockedoninput",
+      "enumtreatincome",
+      "enumyesno",
       "erate",
       "Erated",
       "erating",
       "ESIG",
+      "Esign",
       "Esigned",
       "exceljs",
+      "exportinfo",
       "fauria",
       "fcpg",
       "fenceid",
       "fiadmin",
+      "filtercategorymappings",
+      "filtermappings",
+      "fimanagerid",
+      "fimanagers",
+      "finddealreports",
       "Fira",
       "FLEXBUY",
+      "fname",
       "fonturl",
       "forumbee",
       "funcobj",
+      "gameplans",
+      "genericorganizations",
       "geoapi",
       "geoproc",
       "getprovider",
       "Gramm",
+      "groupid",
+      "grouplogreports",
+      "grouptypes",
       "Gtag",
       "guifgs",
       "gwapi",
@@ -120,7 +173,9 @@
       "hacky",
       "hdop",
       "healthcheck",
+      "heatsheetreports",
       "Helvetica",
+      "historychangesets",
       "hopapi",
       "htmlencode",
       "htmlescape",
@@ -144,11 +199,17 @@
       "Kvppf",
       "landingweb",
       "lastchanged",
+      "lastrun",
       "launchdarkly",
       "Lbbaqqbb",
+      "lenderreports",
+      "leveltypeid",
+      "leveltypes",
       "lexima",
       "liveweb",
+      "lname",
       "localdev",
+      "logreports",
       "logstash",
       "Lucida",
       "luochen",
@@ -159,6 +220,11 @@
       "makerapi",
       "makerjs",
       "mapbox",
+      "matrixlogreports",
+      "matrixrankingreports",
+      "matrixreportmix",
+      "matrixreportrows",
+      "matrixreports",
       "mattn",
       "Menlo",
       "menuprologin",
@@ -167,17 +233,25 @@
       "messageapi",
       "middlewares",
       "mktapi",
+      "mncontractids",
       "Mngr",
       "modelmode",
+      "modelyears",
       "mongodb",
       "monospace",
+      "monthofsale",
+      "monthofsales",
+      "monthsback",
+      "mosid",
       "msdb",
       "msgproc",
       "MULTITERM",
       "mygroup",
+      "MYTABMODES",
       "nelstrom",
       "neoclide",
       "Neue",
+      "newguid",
       "newpassword",
       "newrelic",
       "Nexa",
@@ -188,12 +262,28 @@
       "nonvalidatecount",
       "noopener",
       "noreferrer",
+      "objectiveid",
       "OFAC",
       "offsiteapi",
       "onclickoutside",
       "opentype",
       "ordersapi",
+      "organizationattributes",
+      "organizationtypes",
       "pageid",
+      "pagenum",
+      "parentlevelid",
+      "parentlevels",
+      "parentleveltypeid",
+      "parentsetupbooleanid",
+      "parentsetupbooleans",
+      "parentsetupfiltercategories",
+      "parentsetupfilterid",
+      "parentsetupfilters",
+      "parentsetupproductid",
+      "parentsetupproducts",
+      "parentsourceid",
+      "parentsources",
       "partnereligibleproducts",
       "partnerproductrates",
       "passwordchange",
@@ -203,31 +293,47 @@
       "precommit",
       "productcategoryid",
       "productcode",
+      "productcombos",
       "productcontracts",
+      "productcontractsremit",
       "producteligible",
       "productid",
+      "productmappings",
       "productquote",
       "profileapi",
       "profitsetting",
       "profitsettings",
       "providercode",
+      "PROVIDERCONTRACTID",
       "providerid",
       "providername",
       "quoteid",
       "quoteids",
       "quotesasrates",
+      "quotestatus",
       "rabbitmq",
       "randomstring",
+      "rankingreports",
+      "rankingsetups",
       "rarr",
       "ratepersist",
       "ratesasquotes",
+      "Rebooked",
+      "rebooks",
       "recalc",
+      "regionid",
+      "remitregister",
+      "removeapplication",
+      "removedealership",
       "reportdata",
+      "reportdefinitions",
       "reportid",
       "reportsapi",
       "reporttypeid",
       "reporttypes",
+      "requestinguser",
       "Rerate",
+      "resetaccounts",
       "RISTKEN",
       "ristkensoft",
       "Roboto",
@@ -241,22 +347,49 @@
       "SDQVQ",
       "seayou",
       "Segoe",
+      "setdefaultranking",
       "setingapi",
+      "setrankingorder",
       "settingsdwa",
+      "setupattributes",
+      "setupattributetypes",
+      "setupbooleans",
+      "setupdates",
+      "setupexclusions",
+      "setupfilterassociations",
+      "setupfiltercategories",
+      "setupfiltercategoryassociations",
+      "setupfilters",
+      "setupmonthofsales",
+      "setupobjectiveproducts",
+      "setupobjectives",
+      "setupproductcategories",
+      "setupproducts",
+      "setuptexts",
       "sheerun",
       "showcaseapi",
       "showcasepi",
       "siggwapi",
+      "sortby",
+      "sortdirection",
+      "sourceid",
+      "sourcesettings",
       "spandealerid",
       "spanprovider",
       "spanproviders",
       "ssotoken",
+      "startdt",
       "staticassets",
+      "statusid",
       "statusname",
       "stylis",
+      "subresult",
+      "subresults",
       "swal",
       "sweetalert",
+      "TABTITLES",
       "TAILLIGHTSHOWCASE",
+      "targetlevels",
       "tcomment",
       "telematic",
       "telproc",
@@ -296,7 +429,10 @@
       "triplegs",
       "uiprod",
       "unfetch",
+      "unflag",
       "UNPROCESSABLEENTITY",
+      "upcontractids",
+      "updatesales",
       "upscope",
       "urijs",
       "usageinfo",
@@ -304,13 +440,17 @@
       "userapi",
       "userapplicationactivity",
       "userauthentications",
+      "Userfavoritesdefinitions",
       "userid",
+      "usersettings",
       "uuidv",
+      "validationtypes",
       "vehicleapi",
       "vehicletype",
       "Vercel",
       "vindy",
       "vindyapi",
+      "voideds",
       "vsftp",
       "vsftpd",
       "watchurl",
@@ -323,6 +463,7 @@
       "yggdroot",
       "Zeyada",
       "zjgpj",
+      "zoneid",
       "zulgwapi"
     ]
 }
