adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -245,6 +245,7 @@
       "mosid",
       "msdb",
       "msgproc",
+      "multiselect",
       "MULTITERM",
       "mygroup",
       "MYTABMODES",
