adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -47,6 +47,8 @@
       "bousallyapi",
       "BPAA",
       "branchio",
+      "BUYERCONTRACTINITIALS",
+      "BUYERCONTRACTSIGNATURE",
       "calculationtypes",
       "camelcase",
       "campapi",
@@ -74,11 +76,16 @@
       "christoomey",
       "citems",
       "Ckhp",
+      "CLIENTSIGNATURE",
       "cloneranking",
       "cmode",
       "COBUYER",
+      "COBUYERCONTRACTINITIALS",
+      "COBUYERCONTRACTSIGNATURE",
+      "COBUYERSIGNATURE",
       "cohama",
       "columnid",
+      "columnname",
       "commerceapi",
       "companyid",
       "contractid",
@@ -348,6 +355,8 @@
       "SDQVQ",
       "seayou",
       "Segoe",
+      "SELLERINITIALS",
+      "SELLERSIGNATURE",
       "setdefaultranking",
       "setingapi",
       "setrankingorder",
