adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -60,6 +60,8 @@
       "changestatus",
       "chargebacks",
       "chartsapi",
+      "chartsettingid",
+      "chartsettings",
       "checkmark",
       "childlevelid",
       "childlevels",
@@ -315,6 +317,7 @@
       "PROVIDERCONTRACTID",
       "providerid",
       "providername",
+      "qstring",
       "quoteid",
       "quoteids",
       "quotesasrates",
