adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -80,6 +80,7 @@
       "Ckhp",
       "CLIENTSIGNATURE",
       "cloneranking",
+      "clustertype",
       "cmode",
       "COBUYER",
       "COBUYERCONTRACTINITIALS",
@@ -135,6 +136,7 @@
       "edmunds",
       "elwccm",
       "EMOV",
+      "emptynames",
       "emtz",
       "enchelper",
       "enddt",
@@ -146,11 +148,14 @@
       "erate",
       "Erated",
       "erating",
+      "erietz",
       "ESIG",
       "Esign",
       "Esigned",
+      "evenodd",
       "exceljs",
       "exportinfo",
+      "exporttype",
       "fauria",
       "fcpg",
       "fenceid",
@@ -197,6 +202,7 @@
       "imei",
       "imtoken",
       "inlinesvg",
+      "inputurl",
       "inservicerequired",
       "ipam",
       "ISCOMPLETE",
@@ -215,6 +221,7 @@
       "leveltypeid",
       "leveltypes",
       "lexima",
+      "linebreak",
       "liveweb",
       "lname",
       "localdev",
@@ -280,8 +287,10 @@
       "ordersapi",
       "organizationattributes",
       "organizationtypes",
+      "pageheader",
       "pageid",
       "pagenum",
+      "Paginations",
       "parentlevelid",
       "parentlevels",
       "parentleveltypeid",
@@ -301,6 +310,7 @@
       "pdfs",
       "polyline",
       "precommit",
+      "printview",
       "productcategoryid",
       "productcode",
       "productcombos",
@@ -317,6 +327,7 @@
       "PROVIDERCONTRACTID",
       "providerid",
       "providername",
+      "proxying",
       "qstring",
       "quoteid",
       "quoteids",
@@ -324,6 +335,8 @@
       "quotestatus",
       "rabbitmq",
       "randomstring",
+      "rankingcompare",
+      "rankingcomparison",
       "rankingreports",
       "rankingsetups",
       "rarr",
@@ -355,8 +368,10 @@
       "saletypes",
       "sallyapi",
       "satd",
+      "sbuffer",
       "SDQVQ",
       "seayou",
+      "sectiontitle",
       "Segoe",
       "SELLERINITIALS",
       "SELLERSIGNATURE",
