adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -172,10 +172,12 @@
       "forumbee",
       "funcobj",
       "gameplans",
+      "gbjby",
       "genericorganizations",
       "geoapi",
       "geoproc",
       "getprovider",
+      "gpjby",
       "Gramm",
       "groupid",
       "grouplogreports",
@@ -207,6 +209,7 @@
       "ipam",
       "ISCOMPLETE",
       "ISFINAL",
+      "jllj",
       "Jmob",
       "journeyapi",
       "junegunn",
@@ -405,6 +408,7 @@
       "spandealerid",
       "spanprovider",
       "spanproviders",
+      "SPROC",
       "ssotoken",
       "startdt",
       "staticassets",
@@ -481,6 +485,7 @@
       "voideds",
       "vsftp",
       "vsftpd",
+      "vtzz",
       "watchurl",
       "Wdth",
       "webservice",
