--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -34,6 +34,7 @@
       "autodocker",
       "autotest",
       "AVSU",
+      "ayfv",
       "BADDATA",
       "bapi",
       "basepay",
@@ -179,6 +180,7 @@
       "getprovider",
       "gpjby",
       "Gramm",
+      "groupby",
       "groupid",
       "grouplogreports",
       "grouptypes",
