adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -60,6 +60,7 @@
       "certinfo",
       "changestatus",
       "chargebacks",
+      "chartid",
       "chartsapi",
       "chartsettingid",
       "chartsettings",
