adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -215,6 +215,7 @@
       "jllj",
       "Jmob",
       "journeyapi",
+      "jsonpatch",
       "junegunn",
       "justinmk",
       "Kvppf",
@@ -295,6 +296,7 @@
       "organizationtypes",
       "pageheader",
       "pageid",
+      "pageindex",
       "pagenum",
       "Paginations",
       "parentlevelid",
@@ -358,6 +360,7 @@
       "reportdata",
       "reportdefinitions",
       "reportid",
+      "reportpage",
       "reportsapi",
       "reporttypeid",
       "reporttypes",
@@ -455,6 +458,7 @@
       "tlouserapi",
       "tlovehicleapi",
       "tlpvindyapi",
+      "totalpages",
       "TPACODE",
       "tpope",
       "Traefik",
