adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -175,6 +175,8 @@
       "funcobj",
       "gameplans",
       "gbjby",
+      "Gblame",
+      "Gdiff",
       "genericorganizations",
       "geoapi",
       "geoproc",
