adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -318,6 +318,7 @@
       "partnerproductrates",
       "passwordchange",
       "passwordok",
+      "pcexqc",
       "pdfs",
       "polyline",
       "precommit",
@@ -410,6 +411,7 @@
       "showcaseapi",
       "showcasepi",
       "siggwapi",
+      "signaturepad",
       "sortby",
       "sortdirection",
       "sourceid",
@@ -426,6 +428,7 @@
       "stylis",
       "subresult",
       "subresults",
+      "Svgs",
       "swal",
       "sweetalert",
       "TABTITLES",
@@ -487,6 +490,7 @@
       "usersettings",
       "uuidv",
       "validationtypes",
+      "vals",
       "vehicleapi",
       "vehicletype",
       "Vercel",
