adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -11,6 +11,7 @@
       "activedealerships",
       "activitycode",
       "addapplication",
+      "adddealership",
       "addfavorites",
       "adminapi",
       "agendash",
@@ -36,6 +37,7 @@
       "AVSU",
       "ayfv",
       "BADDATA",
+      "BADREQUEST",
       "bapi",
       "basepay",
       "Bitstream",
@@ -78,23 +80,28 @@
       "childsources",
       "chmupt",
       "christoomey",
+      "chruby",
       "citems",
       "Ckhp",
       "CLIENTSIGNATURE",
       "cloneranking",
       "clustertype",
       "cmode",
+      "CMYK",
       "COBUYER",
       "COBUYERCONTRACTINITIALS",
       "COBUYERCONTRACTSIGNATURE",
       "COBUYERSIGNATURE",
       "cohama",
+      "COLORTERM",
       "columnid",
       "columnname",
       "commerceapi",
       "companyid",
+      "complapi",
       "contractid",
       "contractids",
+      "contractnum",
       "contractnumber",
       "contractpreflight",
       "contractstatuses",
@@ -103,6 +110,8 @@
       "coord",
       "coremenudeals",
       "cosig",
+      "Cosignature",
+      "Cosignatures",
       "ctermfgs",
       "CUSTOMERDEALNUMBER",
       "danlaw",
@@ -118,6 +127,7 @@
       "dealerid",
       "DEALERNAME",
       "dealersettings",
+      "DEALJACKET",
       "Delafield",
       "deletefavorites",
       "denominationtypes",
@@ -132,6 +142,7 @@
       "dmsfielddatatype",
       "dmsfields",
       "dnscache",
+      "DONT\\'T",
       "driveapi",
       "EASYCARE",
       "econtract",
@@ -150,12 +161,16 @@
       "erate",
       "Erated",
       "erating",
+      "eratingqa",
+      "erbussvcapi",
+      "erdealapi",
       "erietz",
       "ESIG",
       "Esign",
       "Esigned",
       "evenodd",
       "exceljs",
+      "executables",
       "exportinfo",
       "exporttype",
       "fauria",
@@ -167,7 +182,9 @@
       "fimanagerid",
       "fimanagers",
       "finddealreports",
+      "fingerprintjs",
       "Fira",
+      "fldpath",
       "FLEXBUY",
       "fname",
       "fonturl",
@@ -181,16 +198,19 @@
       "geoapi",
       "geoproc",
       "getprovider",
+      "getshwweb",
       "gpjby",
       "Gramm",
       "groupby",
       "groupid",
       "grouplogreports",
       "grouptypes",
+      "gsap",
       "Gtag",
       "guifgs",
       "gwapi",
       "GWSZ",
+      "gzsuvbpij",
       "hacky",
       "hdop",
       "healthcheck",
@@ -204,6 +224,7 @@
       "iamapi",
       "idanarye",
       "idbtn",
+      "Idxs",
       "IFTTT",
       "illightd",
       "imei",
@@ -211,6 +232,7 @@
       "inlinesvg",
       "inputurl",
       "inservicerequired",
+      "INSIGHTQUESTIONS",
       "ipam",
       "ISCOMPLETE",
       "ISFINAL",
@@ -220,12 +242,15 @@
       "jsonpatch",
       "junegunn",
       "justinmk",
+      "kdch",
       "Kvppf",
       "landingweb",
       "lastchanged",
       "lastrun",
       "launchdarkly",
       "Lbbaqqbb",
+      "lccpo",
+      "ldap",
       "lenderreports",
       "leveltypeid",
       "leveltypes",
@@ -235,6 +260,7 @@
       "lname",
       "localdev",
       "logreports",
+      "logrocket",
       "logstash",
       "Lucida",
       "luochen",
@@ -277,6 +303,7 @@
       "nacro",
       "nelstrom",
       "neoclide",
+      "neovim",
       "Neue",
       "newguid",
       "newpassword",
@@ -286,13 +313,19 @@
       "nkypjj",
       "noarg",
       "nodemon",
+      "nomarker",
+      "nomarkers",
       "nonvalidatecount",
       "noopener",
       "noreferrer",
+      "nvim",
       "objectiveid",
       "OFAC",
+      "OFFICIALDOCS",
       "offsiteapi",
       "onclickoutside",
+      "OPENMEDIUM",
+      "OPENSMALL",
       "opentype",
       "ordersapi",
       "organizationattributes",
@@ -318,10 +351,12 @@
       "partnerproductrates",
       "passwordchange",
       "passwordok",
+      "pbcopy",
       "pcexqc",
       "pdfs",
       "pgvy",
       "polyline",
+      "portalweb",
       "precommit",
       "printview",
       "productcategoryid",
@@ -339,8 +374,13 @@
       "providercode",
       "PROVIDERCONTRACTID",
       "providerid",
+      "providerlocation",
       "providername",
+      "provname",
       "proxying",
+      "psfc",
+      "pynvim",
+      "pythonx",
       "qstring",
       "quoteid",
       "quoteids",
@@ -355,6 +395,7 @@
       "rarr",
       "ratepersist",
       "ratesasquotes",
+      "rbenv",
       "Rebooked",
       "rebooks",
       "recalc",
@@ -374,6 +415,7 @@
       "resetaccounts",
       "RISTKEN",
       "ristkensoft",
+      "RISTKENSOFTWARE",
       "Roboto",
       "rssapplications",
       "rssi",
@@ -389,6 +431,7 @@
       "Segoe",
       "SELLERINITIALS",
       "SELLERSIGNATURE",
+      "sendgrid",
       "setdefaultranking",
       "setingapi",
       "setrankingorder",
@@ -408,11 +451,14 @@
       "setupproductcategories",
       "setupproducts",
       "setuptexts",
+      "shadowdisabled",
       "sheerun",
       "showcaseapi",
       "showcasepi",
       "siggwapi",
       "signaturepad",
+      "SIGNIN",
+      "smtp",
       "sortby",
       "sortdirection",
       "sourceid",
@@ -429,17 +475,23 @@
       "stylis",
       "subresult",
       "subresults",
+      "svcapi",
       "Svgs",
       "swal",
       "sweetalert",
+      "Tabset",
       "TABTITLES",
       "TAILLIGHTSHOWCASE",
       "targetlevels",
       "tcomment",
       "telematic",
       "telproc",
+      "termguicolors",
+      "terminfo",
+      "Textbox",
       "theming",
       "TIMEFRAME",
+      "tinycolor",
       "tloacctapi",
       "tloadminapi",
       "tloapi",
@@ -465,6 +517,7 @@
       "tlouserapi",
       "tlovehicleapi",
       "tlpvindyapi",
+      "tmux",
       "totalpages",
       "TPACODE",
       "tpope",
@@ -473,12 +526,15 @@
       "trekapi",
       "trekweb",
       "triplegs",
+      "truecolor",
+      "uatsql",
       "uiprod",
       "unfetch",
       "unflag",
       "UNPROCESSABLEENTITY",
       "upcontractids",
       "updatesales",
+      "updatespplink",
       "upscope",
       "urijs",
       "usageinfo",
@@ -505,13 +561,18 @@
       "Wdth",
       "webservice",
       "wistia",
+      "xgtw",
+      "xgtwqa",
+      "xlink",
       "xockp",
+      "xserializer",
       "Xuyuanp",
       "yats",
       "yggdroot",
       "Zeyada",
       "zjgpj",
       "zoneid",
-      "zulgwapi"
+      "zulgwapi",
+      "zuluweb"
     ]
 }
