adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -30,6 +30,7 @@
       "ardproc",
       "asmx",
       "attrid",
+      "authed",
       "autocapitalize",
       "autocorrect",
       "autodocker",
@@ -112,6 +113,7 @@
       "cosig",
       "Cosignature",
       "Cosignatures",
+      "countables",
       "ctermfgs",
       "CUSTOMERDEALNUMBER",
       "danlaw",
@@ -529,6 +531,7 @@
       "truecolor",
       "uatsql",
       "uiprod",
+      "uncheck",
       "unfetch",
       "unflag",
       "UNPROCESSABLEENTITY",
