adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -245,6 +245,7 @@
       "junegunn",
       "justinmk",
       "kdch",
+      "keycare",
       "Kvppf",
       "landingweb",
       "lastchanged",
@@ -285,6 +286,7 @@
       "merginal",
       "messageapi",
       "middlewares",
+      "minlength",
       "mktapi",
       "mncontractids",
       "Mngr",
