adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -144,6 +144,7 @@
       "dmsfielddatatype",
       "dmsfields",
       "dnscache",
+      "DONT",
       "DONT\\'T",
       "driveapi",
       "EASYCARE",
@@ -169,6 +170,7 @@
       "erietz",
       "ESIG",
       "Esign",
+      "esignature",
       "Esigned",
       "evenodd",
       "exceljs",
@@ -190,6 +192,8 @@
       "FLEXBUY",
       "fname",
       "fonturl",
+      "FORDESC",
+      "FORDESP",
       "forumbee",
       "funcobj",
       "gameplans",
@@ -470,6 +474,7 @@
       "spandealerid",
       "spanprovider",
       "spanproviders",
+      "sppquote",
       "SPROC",
       "ssotoken",
       "startdt",
@@ -521,6 +526,8 @@
       "tlouserapi",
       "tlovehicleapi",
       "tlpvindyapi",
+      "TLSHOWCASE",
+      "TLSHOWCASELITE",
       "tmux",
       "totalpages",
       "TPACODE",
