adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -51,8 +51,10 @@
       "bousallyapi",
       "BPAA",
       "branchio",
+      "budco",
       "BUYERCONTRACTINITIALS",
       "BUYERCONTRACTSIGNATURE",
+      "cachegoose",
       "calculationtypes",
       "camelcase",
       "campapi",
@@ -120,6 +122,7 @@
       "danlawapi",
       "Darkholme",
       "dataapi",
+      "datasplit",
       "datatypes",
       "dateofsale",
       "datepicker",
@@ -133,6 +136,8 @@
       "Delafield",
       "deletefavorites",
       "denominationtypes",
+      "deref",
+      "Descr",
       "devisionid",
       "devops",
       "devtools",
@@ -151,6 +156,7 @@
       "econtract",
       "edmunds",
       "elwccm",
+      "emnify",
       "EMOV",
       "emptynames",
       "emtz",
@@ -229,6 +235,8 @@
       "htmlescape",
       "iamadminapi",
       "iamapi",
+      "iccid",
+      "Icinriww",
       "idanarye",
       "idbtn",
       "Idxs",
@@ -240,6 +248,7 @@
       "inputurl",
       "inservicerequired",
       "INSIGHTQUESTIONS",
+      "INTERNALSERVERERROR",
       "ipam",
       "ISCOMPLETE",
       "ISFINAL",
@@ -252,6 +261,7 @@
       "kdch",
       "keycare",
       "kmonad",
+      "kore",
       "Kvppf",
       "landingweb",
       "lastchanged",
@@ -296,6 +306,8 @@
       "mktapi",
       "mncontractids",
       "Mngr",
+      "Mnify",
+      "mobilenet",
       "modelmode",
       "modelyears",
       "mongodb",
@@ -306,6 +318,7 @@
       "mosid",
       "msdb",
       "msgproc",
+      "multiguard",
       "multiselect",
       "MULTITERM",
       "mygroup",
@@ -322,6 +335,7 @@
       "nextjs",
       "nkypjj",
       "noarg",
+      "NOCONTENT",
       "nodemon",
       "nomarker",
       "nomarkers",
@@ -381,6 +395,7 @@
       "profileapi",
       "profitsetting",
       "profitsettings",
+      "protracking",
       "providercode",
       "PROVIDERCONTRACTID",
       "providerid",
@@ -398,6 +413,7 @@
       "quotestatus",
       "rabbitmq",
       "randomstring",
+      "Ranedne",
       "rankingcompare",
       "rankingcomparison",
       "rankingreports",
@@ -497,12 +513,15 @@
       "tcomment",
       "telematic",
       "telproc",
+      "tensorflow",
       "termguicolors",
       "terminfo",
       "Textbox",
+      "tfjs",
       "theming",
       "TIMEFRAME",
       "tinycolor",
+      "tliteapi",
       "tloacctapi",
       "tloadminapi",
       "tloapi",
@@ -567,6 +586,7 @@
       "Vercel",
       "vindy",
       "vindyapi",
+      "VKBG",
       "voideds",
       "vsftp",
       "vsftpd",
