adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -21,6 +21,7 @@
       "ALLGOOD",
       "altfinance",
       "apidoc",
+      "apikey",
       "apos",
       "appid",
       "applicationsettings",
@@ -86,6 +87,7 @@
       "chruby",
       "citems",
       "Ckhp",
+      "clickup",
       "CLIENTSIGNATURE",
       "cloneranking",
       "clustertype",
@@ -95,6 +97,7 @@
       "COBUYERCONTRACTINITIALS",
       "COBUYERCONTRACTSIGNATURE",
       "COBUYERSIGNATURE",
+      "COCLIENTSIGNATURE",
       "cohama",
       "COLORTERM",
       "columnid",
@@ -132,6 +135,7 @@
       "dealerid",
       "DEALERNAME",
       "dealersettings",
+      "dealersignup",
       "DEALJACKET",
       "Delafield",
       "deletefavorites",
@@ -202,6 +206,7 @@
       "FORDESP",
       "forumbee",
       "funcobj",
+      "FXJVQNJTCQ",
       "gameplans",
       "gbjby",
       "Gblame",
@@ -231,10 +236,13 @@
       "Helvetica",
       "historychangesets",
       "hopapi",
+      "Hpuee",
+      "HQHXM",
       "htmlencode",
       "htmlescape",
       "iamadminapi",
       "iamapi",
+      "IBNW",
       "iccid",
       "Icinriww",
       "idanarye",
@@ -243,6 +251,7 @@
       "IFTTT",
       "illightd",
       "imei",
+      "imgix",
       "imtoken",
       "inlinesvg",
       "inputurl",
@@ -252,6 +261,7 @@
       "ipam",
       "ISCOMPLETE",
       "ISFINAL",
+      "JKYTSTRRDUS",
       "jllj",
       "Jmob",
       "journeyapi",
@@ -263,6 +273,7 @@
       "kmonad",
       "kore",
       "Kvppf",
+      "kwad",
       "landingweb",
       "lastchanged",
       "lastrun",
@@ -297,10 +308,12 @@
       "matrixreports",
       "mattn",
       "Menlo",
+      "menupro",
       "menuprologin",
       "menutransid",
       "merginal",
       "messageapi",
+      "mgmtapi",
       "middlewares",
       "minlength",
       "mktapi",
@@ -359,6 +372,7 @@
       "pageindex",
       "pagenum",
       "Paginations",
+      "pandadoc",
       "parentlevelid",
       "parentlevels",
       "parentleveltypeid",
@@ -375,12 +389,15 @@
       "partnerproductrates",
       "passwordchange",
       "passwordok",
+      "paymentweb",
       "pbcopy",
       "pcexqc",
       "pdfs",
       "pgvy",
+      "playlstapi",
       "polyline",
       "portalweb",
+      "Ppowob",
       "precommit",
       "printview",
       "productcategoryid",
@@ -402,8 +419,10 @@
       "providerlocation",
       "providername",
       "provname",
+      "provoproc",
       "proxying",
       "psfc",
+      "Ptutex",
       "pynvim",
       "pythonx",
       "qstring",
@@ -425,6 +444,7 @@
       "Rebooked",
       "rebooks",
       "recalc",
+      "recordset",
       "regionid",
       "remitregister",
       "removeapplication",
@@ -453,6 +473,7 @@
       "sbuffer",
       "SDQVQ",
       "seayou",
+      "secretkey",
       "sectiontitle",
       "Segoe",
       "SELLERINITIALS",
@@ -471,6 +492,7 @@
       "setupfiltercategories",
       "setupfiltercategoryassociations",
       "setupfilters",
+      "setupid",
       "setupmonthofsales",
       "setupobjectiveproducts",
       "setupobjectives",
@@ -516,6 +538,7 @@
       "tensorflow",
       "termguicolors",
       "terminfo",
+      "testuser",
       "Textbox",
       "tfjs",
       "theming",
@@ -549,6 +572,7 @@
       "tlpvindyapi",
       "TLSHOWCASE",
       "TLSHOWCASELITE",
+      "tlsignupservice",
       "tmux",
       "totalpages",
       "TPACODE",
@@ -564,6 +588,7 @@
       "uncheck",
       "unfetch",
       "unflag",
+      "unittesting",
       "UNPROCESSABLEENTITY",
       "upcontractids",
       "updatesales",
@@ -594,6 +619,8 @@
       "watchurl",
       "Wdth",
       "webservice",
+      "WEBSVC",
+      "whsec",
       "wistia",
       "xgtw",
       "xgtwqa",
@@ -603,10 +630,13 @@
       "Xuyuanp",
       "yats",
       "yggdroot",
+      "YSLV",
       "Zeyada",
       "zjgpj",
       "zoneid",
       "zulgwapi",
-      "zuluweb"
+      "zulumktweb",
+      "zuluweb",
+      "zurichuser"
     ]
 }
