adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -7,6 +7,7 @@
     "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": true,
     "cSpell.userWords": [
       "accountcode",
+      "accountnumber",
       "acctapi",
       "activedealerships",
       "activitycode",
@@ -114,6 +115,7 @@
       "contractstatusname",
       "controlfreak",
       "coord",
+      "Cordova",
       "coremenudeals",
       "cosig",
       "Cosignature",
@@ -312,6 +314,7 @@
       "menuprologin",
       "menutransid",
       "merginal",
+      "MERN",
       "messageapi",
       "mgmtapi",
       "middlewares",
@@ -535,6 +538,7 @@
       "tcomment",
       "telematic",
       "telproc",
+      "templating",
       "tensorflow",
       "termguicolors",
       "terminfo",
