adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -19,6 +19,7 @@
       "airdock",
       "AKIAIXOT",
       "AKIAJXXQSUUZBEAF",
+      "allaccounts",
       "ALLGOOD",
       "altfinance",
       "apidoc",
@@ -106,6 +107,7 @@
       "commerceapi",
       "companyid",
       "complapi",
+      "cond",
       "contractid",
       "contractids",
       "contractnum",
@@ -121,6 +123,7 @@
       "Cosignature",
       "Cosignatures",
       "countables",
+      "createmode",
       "ctermfgs",
       "CUSTOMERDEALNUMBER",
       "danlaw",
@@ -138,6 +141,7 @@
       "DEALERNAME",
       "dealersettings",
       "dealersignup",
+      "dealeruniqueids",
       "DEALJACKET",
       "Delafield",
       "deletefavorites",
@@ -162,6 +166,7 @@
       "econtract",
       "edmunds",
       "elwccm",
+      "emailfnd",
       "emnify",
       "EMOV",
       "emptynames",
@@ -200,6 +205,7 @@
       "finddealreports",
       "fingerprintjs",
       "Fira",
+      "firstname",
       "fldpath",
       "FLEXBUY",
       "fname",
@@ -254,6 +260,7 @@
       "illightd",
       "imei",
       "imgix",
+      "impid",
       "imtoken",
       "inlinesvg",
       "inputurl",
@@ -278,11 +285,13 @@
       "kwad",
       "landingweb",
       "lastchanged",
+      "lastname",
       "lastrun",
       "launchdarkly",
       "Lbbaqqbb",
       "lccpo",
       "ldap",
+      "legacyapp",
       "lenderreports",
       "leveltypeid",
       "leveltypes",
@@ -291,6 +300,7 @@
       "liveweb",
       "lname",
       "localdev",
+      "loginid",
       "logreports",
       "logrocket",
       "logstash",
@@ -421,6 +431,7 @@
       "providerid",
       "providerlocation",
       "providername",
+      "providerusername",
       "provname",
       "provoproc",
       "proxying",
@@ -476,6 +487,7 @@
       "sbuffer",
       "SDQVQ",
       "seayou",
+      "secretanswer",
       "secretkey",
       "sectiontitle",
       "Segoe",
@@ -509,6 +521,7 @@
       "siggwapi",
       "signaturepad",
       "SIGNIN",
+      "Signup",
       "smtp",
       "sortby",
       "sortdirection",
@@ -606,7 +619,10 @@
       "userauthentications",
       "Userfavoritesdefinitions",
       "userid",
+      "usernameok",
       "usersettings",
+      "usersignup",
+      "usrid",
       "uuidv",
       "validationtypes",
       "vals",
