adds words to user dictionary

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -546,6 +546,7 @@
       "sweetalert",
       "Tabset",
       "TABTITLES",
+      "TAILLIGHTCOMMERCE",
       "TAILLIGHTSHOWCASE",
       "targetlevels",
       "tcomment",
@@ -561,6 +562,10 @@
       "theming",
       "TIMEFRAME",
       "tinycolor",
+      "tlapp",
+      "tlapplication",
+      "TLAPPLICATIONS",
+      "TLCOMMERCE",
       "tliteapi",
       "tloacctapi",
       "tloadminapi",
@@ -614,6 +619,7 @@
       "urijs",
       "usageinfo",
       "useraccounts",
+      "useraccountspw",
       "userapi",
       "userapplicationactivity",
       "userauthentications",
